minor updates to Jupyter notebook

--- a/formic_acid/IDAES_openLCA_Interface.ipynb
+++ b/formic_acid/IDAES_openLCA_Interface.ipynb
@@ -39,11 +39,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "be8203ce-1f1e-4140-a597-0b20448d11a9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#Set up and run IDAES steady state model\n",
-    "m = main_steady_state(optimize=False, dev_mode= True)"
+    "m = main_steady_state(optimize=False, dev_mode=True)"
    ]
   },
   {
@@ -210,10 +212,25 @@
     "    redef25.value = m.fs.electricity[0].value\n",
     "    \n",
     "    # Specify the parameter redefinitions in the calculation setup\n",
-    "    calculation_setup.parameter_redefs = [redef1, redef2, redef3, redef4, redef5, redef6, redef7, redef8, redef9, redef10, redef11, redef12, redef13, redef14, redef15, redef16, redef17, redef18, redef19, redef20, redef21, redef22, redef23, redef24, redef25]\n",
+    "    return [redef1, redef2, redef3, redef4, redef5, redef6, redef7, redef8, redef9, redef10, redef11, redef12, redef13, redef14, redef15, redef16, redef17, redef18, redef19, redef20, redef21, redef22, redef23, redef24, redef25]\n",
     "\n",
     "# Call the data transfer function to transfer the simulation data from IDAES to openLCA\n",
-    "data_transfer_idaes_openLCA(m)"
+    "param_list = data_transfer_idaes_openLCA(m)\n",
+    "calculation_setup.parameter_redefs = param_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e23b03cc-e491-47e4-9da0-781b932d26aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Showcase the parameter values\n",
+    "pd.DataFrame({\n",
+    "    'name': [x.name for x in param_list],\n",
+    "    'value': [x.value for x in param_list]\n",
+    "})"
    ]
   },
   {
@@ -400,7 +417,8 @@
     "    m.fs.membrane.area.fix(mem_area) # cm2\n",
     "    solver = get_solver(\"ipopt\")\n",
     "    results = solver.solve(m, tee = False)\n",
-    "    data_transfer_idaes_openLCA(m)\n",
+    "    \n",
+    "    calculation_setup.parameter_redefs = data_transfer_idaes_openLCA(m)\n",
     "\n",
     "    # Run the calculation for the product system\n",
     "    LCA_result = client.calculate(calculation_setup)\n",
