--- a/PrOMMiS_LCA_Model.ipynb
+++ b/PrOMMiS_LCA_Model.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "18ef7b90",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import olca_ipc\n",
-    "import olca_schema\n",
+    "import olca_schema as olca\n",
+    "import netolca\n",
     "from typing import Union, List, Optional\n",
     "\n",
     "from pyomo.environ import (units,value,)\n",
@@ -1675,10 +1676,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "cc31e254",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-02 13:36:04,591 - INFO - ✅ Connection test successful. Found 1957 processes.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1686,13 +1694,6 @@
       "\n",
       "🔌 STEP 1: Connecting to openLCA...\n",
       "✅ Connected to openLCA\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-08-01 14:22:22,564 - INFO - ✅ Connection test successful. Found 1955 processes.\n"
      ]
     }
    ],
@@ -1721,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "ad4f062f",
    "metadata": {},
    "outputs": [],
@@ -1741,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "0121e236",
    "metadata": {},
    "outputs": [],
@@ -1759,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "46304b81",
    "metadata": {},
    "outputs": [],
@@ -1777,10 +1778,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "db70773f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🔍 Processing 23 flows for process: Test Process 1\n",
+      "============================================================\n",
+      "\n",
+      "📋 Row 1: 374 ppm REO Feed\n",
+      "   Unit: kg, Amount: 1420741.1877343715\n",
+      "   Type: Input\n",
+      "\n",
+      "🔍 Search Options for Flow: 374 ppm REO Feed\n",
+      "💡 Choose search strategy:\n",
+      "   1. Search in PROCESSES (e.g., 'Coal power plant', 'Steel production')\n",
+      "   2. Search in FLOWS (e.g., 'CO2', 'Water', 'Electricity')\n",
+      "   3. Skip this flow\n",
+      "\n",
+      "💡 Examples:\n",
+      "   - For 'Coal': Choose PROCESSES (search for coal power plants)\n",
+      "   - For 'CO2': Choose FLOWS (search for CO2 emissions flows)\n",
+      "   - For 'Water': Choose FLOWS (search for water flows)\n",
+      "\n",
+      "🔍 Enter search keywords for PROCESS search:\n",
+      "Default would be: '374 ppm REO Feed'\n",
+      "   🔍 Searching for processes containing '374 ppm REO Feed'...\n",
+      "   🔍 Searching through 1957 processes...\n",
+      "   ❌ No processes found matching '374 ppm REO Feed' in process names\n",
+      "   📊 Found 0 matching processes\n",
+      "\n",
+      "=== Process Selection for Flow: 374 ppm REO Feed ===\n",
+      "No existing processs found matching '374 ppm REO Feed'\n",
+      "Options:\n",
+      "1. Create new elementary flow\n",
+      "2. Create new product flow\n",
+      "0. Skip this flow\n",
+      "Will create new product flow: 374 ppm REO Feed\n",
+      "🆕 Creating new product_flow: 374 ppm REO Feed\n",
+      "   🔧 Using existing flow pattern to avoid @type issues...\n",
+      "   🔍 Looking for mass unit pattern for: kg\n",
+      "   ⚠️  No compatible unit found, using first available pattern...\n",
+      "   ✅ Using fallback pattern: MJ\n",
+      "   ✅ Found template flow: Electricity, AC, 2300-7650 V\n",
+      "   ✅ Template unit: MJ\n",
+      "   ✅ Template flow property: Energy\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Ref' object has no attribute 'flow_properties'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m process = \u001b[43mcreate_process_from_dataframe_with_selection\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m    \u001b[49m\u001b[43mclient\u001b[49m\u001b[43m=\u001b[49m\u001b[43mclient\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m    \u001b[49m\u001b[43mprocess_name\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprocess_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mprocess_description\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprocess_description\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\franc\\OneDrive - KeyLogic\\Working Folder\\Coding\\PrOMMiS_LCA_Integration\\src\\create_olca_process\\process_manager.py:101\u001b[39m, in \u001b[36mcreate_process_from_dataframe_with_selection\u001b[39m\u001b[34m(client, df, process_name, process_description)\u001b[39m\n\u001b[32m     98\u001b[39m \u001b[38;5;66;03m# Let user select what to do with this flow\u001b[39;00m\n\u001b[32m     99\u001b[39m selection = show_flow_process_selection_menu(flow_name, matching_items, search_type, search_keywords)\n\u001b[32m--> \u001b[39m\u001b[32m101\u001b[39m flow, unit = \u001b[43m_process_user_selection\u001b[49m\u001b[43m(\u001b[49m\u001b[43mclient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mselection\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mflow_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43munit_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrow\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    103\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m flow \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m unit:\n\u001b[32m    104\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m⏭️  Skipping flow: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mflow_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\franc\\OneDrive - KeyLogic\\Working Folder\\Coding\\PrOMMiS_LCA_Integration\\src\\create_olca_process\\process_manager.py:187\u001b[39m, in \u001b[36m_process_user_selection\u001b[39m\u001b[34m(client, selection, flow_name, unit_name, row)\u001b[39m\n\u001b[32m    179\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m   ✅ Template flow property: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtemplate_flow_property.name\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mif\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28mhasattr\u001b[39m(template_flow_property,\u001b[38;5;250m \u001b[39m\u001b[33m'\u001b[39m\u001b[33mname\u001b[39m\u001b[33m'\u001b[39m)\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01melse\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[33m'\u001b[39m\u001b[33mUnknown\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    181\u001b[39m \u001b[38;5;66;03m# Create new flow using the template pattern\u001b[39;00m\n\u001b[32m    182\u001b[39m new_flow = olca.Flow(\n\u001b[32m    183\u001b[39m     \u001b[38;5;28mid\u001b[39m=generate_id(\u001b[33m\"\u001b[39m\u001b[33mflow\u001b[39m\u001b[33m\"\u001b[39m),\n\u001b[32m    184\u001b[39m     name=flow_name,\n\u001b[32m    185\u001b[39m     description=row.get(\u001b[33m'\u001b[39m\u001b[33mDescription\u001b[39m\u001b[33m'\u001b[39m, \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mNew \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mflow_type.lower()\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mflow_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m),\n\u001b[32m    186\u001b[39m     flow_type=olca.FlowType.ELEMENTARY_FLOW \u001b[38;5;28;01mif\u001b[39;00m flow_type == \u001b[33m\"\u001b[39m\u001b[33mELEMENTARY_FLOW\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m olca.FlowType.PRODUCT_FLOW,\n\u001b[32m--> \u001b[39m\u001b[32m187\u001b[39m     flow_properties=\u001b[43mtemplate_flow\u001b[49m\u001b[43m.\u001b[49m\u001b[43mflow_properties\u001b[49m\n\u001b[32m    188\u001b[39m )\n\u001b[32m    190\u001b[39m \u001b[38;5;66;03m# Try to save the new flow\u001b[39;00m\n\u001b[32m    191\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n",
+      "\u001b[31mAttributeError\u001b[39m: 'Ref' object has no attribute 'flow_properties'"
+     ]
+    }
+   ],
    "source": [
     "process = create_process_from_dataframe_with_selection(\n",
     "    client=client,\n",
@@ -1795,7 +1857,16 @@
    "id": "0a1c83a6",
    "metadata": {},
    "source": [
-    "## Step 8: Create Process in openLCA from the final dataframe produced in Step 6 "
+    "## Step 8: Create Product System"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80359e22",
+   "metadata": {},
+   "source": [
+    "#### Here we will use the unit process created in the previous step to create a product system\n",
+    "#### This step uses the netlolca library to retrieve the process id and use it to build the product system using default providers"
    ]
   },
   {
@@ -1804,7 +1875,37 @@
    "id": "e353671c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# get the process id \n",
+    "pid = process.id\n",
+    "\n",
+    "# build supply chain using default providers\n",
+    "# pl_list: list of process links\n",
+    "# pd_list: list of process ids\n",
+    "pl_list, pd_list = build_supply_chain(pid)\n",
+    "\n",
+    "# creating the product system structure will require the:\n",
+    "# Reference process\n",
+    "# the linking configuration\n",
+    "p_ref = client.query(olca.Process, pid).to_ref()\n",
+    "p_lc = olca.LinkingConfig()\n",
+    "\n",
+    "# create the product system using openLCA client\n",
+    "ps_ref = client.create_product_system(p_ref, p_lc)\n",
+    "\n",
+    "ps_obj = client.query(olca.ProductSystem, ps_ref.id)\n",
+    "\n",
+    "# Add all processes from the supply chain\n",
+    "ps_obj.processes = [\n",
+    "    client.query(olca.Process, x).to_ref() for x in pd_list\n",
+    "]\n",
+    "\n",
+    "# Add the process links\n",
+    "ps_obj.process_links = pl_list\n",
+    "\n",
+    "# Add the completed product system to the database\n",
+    "client.add (ps_obj)\n"
+   ]
   }
  ],
  "metadata": {
