--- a/PrOMMiS_LCA_Model.ipynb
+++ b/PrOMMiS_LCA_Model.ipynb
@@ -63,7 +63,7 @@
     "import numpy as np\n",
     "import olca_ipc\n",
     "import olca_schema as olca\n",
-    "import netolca\n",
+    "import netlolca\n",
     "from typing import Union, List, Optional\n",
     "\n",
     "from pyomo.environ import (units,value,)\n",
@@ -81,7 +81,7 @@
     "\n",
     "# modules to connect to openLCA\n",
     "from src.create_olca_process.olca_utils import (\n",
-    "    initialize_client, print_database_summary, generate_id, find_entity_by_name\n",
+    "    print_database_summary, generate_id, find_entity_by_name\n",
     ")\n",
     "from src.create_olca_process.dataframe_utils import (\n",
     "    validate_dataframe_columns, load_dataframe_from_csv, get_amount_from_dataframe_row\n",
@@ -1676,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cc31e254",
    "metadata": {},
    "outputs": [
@@ -1699,7 +1699,9 @@
    ],
    "source": [
     "print(\"\\n🔌 STEP 1: Connecting to openLCA...\")\n",
-    "client = initialize_client()"
+    "client = NetlOlca()\n",
+    "client.connect()\n",
+    "client.read()"
    ]
   },
   {
