Made changes to PrOMMiS_LCA_Model.ipynb to reflect changes made in the finalize_LCA_flows.py main() function.

--- a/PrOMMiS_LCA_Model.ipynb
+++ b/PrOMMiS_LCA_Model.ipynb
@@ -216,7 +216,8 @@
     "    finalized_df = finalize_LCA_flows.finalize_df(\n",
     "        df=df, \n",
     "        reference_flow='99.85% REO Product', \n",
-    "        reference_source='Roaster Product'\n",
+    "        reference_source='Roaster Product',\n",
+    "        water_type='raw fresh water'\n",
     "    )\n",
     "    \n",
     "    # Get summary\n",
