Minor changes to allow the Jupyter Notebook to run

--- a/PrOMMiS_LCA_Model.ipynb
+++ b/PrOMMiS_LCA_Model.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "18ef7b90",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
     "from src import finalize_LCA_flows\n",
     "\n",
     "# modules to connect to openLCA\n",
-    "from src.create_olca_process import create_new_process, find_processes_by_flow, flow_search_function"
+    "from src.create_olca_process import create_new_process"
    ]
   },
   {
@@ -373,13 +373,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "process = create_new_process(netl,df,process_name,process_description)"
+    "process = create_new_process.create_new_process(netl,df,process_name,process_description)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72d6b46f-66bb-474b-aa8f-db813ca06cfe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lca-prommis",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
