Included latest functions in jupyter notebook

--- a/PrOMMiS_LCA_Model.ipynb
+++ b/PrOMMiS_LCA_Model.ipynb
@@ -55,6 +55,7 @@
     "# import main libraries\n",
     "\n",
     "import pandas as pd\n",
+    "import olca_schema as olca\n",
     "\n",
     "from netlolca.NetlOlca import NetlOlca\n",
     "\n",
@@ -982,9 +983,105 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create process usign the create_new_process function\n",
     "process = lca_prommis.create_lca.create_new_process(netl,df,process_name,process_description)\n",
+    "# get the process uuid to be used in the following step when create a product system\n",
+    "process_id = netl.query(olca.Process, process.id)\n",
     "# TODO: give option for the user to enter another keyword when searching for a flow\n",
     "# NOTE: For future discussion - is it better to select the flow then the provider (current status) or pick provider first then select relevant flows?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e884dcf2",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:black; font-weight:bold\"> Create product system </span> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "815a15c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create product system\n",
+    "ps = lca_prommis.create_ps(netl, process_id)\n",
+    "# get product system id to use in next step \n",
+    "ps_uuid = netl.query(olca.ProductSystem, ps.id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3ead577",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:black; font-weight:bold\"> Run analysis </span> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffbfdb01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First we need to select the impact assessment method uuid\n",
+    "# In this project we are developing our own impact assessment \n",
+    "# method that calculates the global warming potenit, cumulative energy demand, water consumption, and acidification potential\n",
+    "# The developed method is included in the database attached with this jupyter notebook\n",
+    "# TODO: add uuid of impact assessment method \n",
+    "impact_method_uuid = ''\n",
+    "\n",
+    "result = lca_prommis.run_analysis(netl, ps_uuid, impact_method_uuid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e5f0a21",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:black; font-weight:bold\"> Generate Results - Total Environmental Impact </span> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7020f5e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use the generate_total_results function to generate the total environmental impacts\n",
+    "# this also stores the results in a csv stored in the output folder\n",
+    "total_impacts = lca_prommis.generate_total_results(result)\n",
+    "total_impacts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36648ebe",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:black; font-weight:bold\"> Generate Results - Contribution Tree </span> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1af1df7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use the generate_contribution_tree to generate the results by category\n",
+    "# here we have to determine the number of nodes and levels in the generates tree\n",
+    "# the number of nodes reflects the number of child/constituting nodes to be expanded (e.g., electricity, heat, sulfuric acic, etc.)\n",
+    "# selecting three nodes will show the top three contributors only\n",
+    "max_expand_nodes = 5 # this is an example and the user can change this\n",
+    "# the number of levels reflects the number of steps away from the main product\n",
+    "max_expand_levels = 2\n",
+    "# Note: this step will store the results for each impact cateogory in a separate excel file\n",
+    "lca_prommis.generate_contribution_tree(netl, max_expand_levels, max_expand_nodes)"
    ]
   }
  ],
