Added function to import database from EDX

--- a/PrOMMiS_LCA_Model.ipynb
+++ b/PrOMMiS_LCA_Model.ipynb
@@ -1083,6 +1083,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e6cc2395",
+   "metadata": {},
+   "source": [
+    "#### <span style=\"color:black; font-weight:bold\"> Download PrOMMiS openLCA database </span> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69dd35a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO Sending request to EDX for resource data...\n",
+      "ERROR Failed to get EDX  resource data. Status code: 400. \n",
+      "Database downloaded successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The resource id of the database saved on EDX\n",
+    "# Note: this resource id might change as we improve and update the PrOMMiS_LCA_Integration openLCA database\n",
+    "# Check and update the resource id before running the following lines of code\n",
+    "# Resource Link: https://edx.netl.doe.gov/workspace/resources/prommis-lca-integration\n",
+    "\n",
+    "resource_id = '07e09dfa-1928-46f0-8ced-56d0010b056f'\n",
+    "\n",
+    "lca_prommis.import_db.import_db(resource_id)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "cc31e254",
@@ -1543,7 +1578,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use 374 ppm REO Feed:  skip\n"
@@ -1560,7 +1595,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your choice (1 or 2):  1\n",
@@ -1616,7 +1651,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Select a flow (1-9 or 'q' to quit):  8\n",
@@ -1631,7 +1666,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Electricity, AC, 120 V:  skip\n"
@@ -1645,7 +1680,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Heat:  skip\n"
@@ -1659,7 +1694,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Hydrochloric Acid:  skip\n"
@@ -1673,7 +1708,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Kerosene:  skip\n"
@@ -1687,7 +1722,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Oxalic Acid:  skip\n"
@@ -1701,7 +1736,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Sodium Hydroxide:  skip\n"
@@ -1715,7 +1750,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Solid Waste:  skip\n"
@@ -1729,7 +1764,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Sulfuric Acid:  skip\n"
@@ -1743,7 +1778,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Wastewater:  skip\n"
@@ -1809,7 +1844,7 @@
     "# method that calculates the global warming potenit, cumulative energy demand, water consumption, and acidification potential\n",
     "# The developed method is included in the database attached with this jupyter notebook\n",
     "# TODO: add uuid of impact assessment method \n",
-    "impact_method_uuid = ''\n",
+    "impact_method_uuid = '60cb71ff-0ef0-4e6c-9ce7-c885d921dd15'\n",
     "\n",
     "result = lca_prommis.run_analysis(netl, ps_uuid, impact_method_uuid)"
    ]
@@ -1864,7 +1899,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "olca_env",
    "language": "python",
    "name": "python3"
   },
