--- a/PrOMMiS_LCA_Model.ipynb
+++ b/PrOMMiS_LCA_Model.ipynb
@@ -725,6 +725,19 @@
    "metadata": {},
    "source": [
     "<span style=\"color:black\"> \n",
+    "To create a process in openLCA we need to import the exchanges table generates in previous steps.\n",
+    "The exchanges table should have the following:\n",
+    "\n",
+    "* <u> Flow Name:</u> this will be later used to guide you in creating exchanges\n",
+    "* <u>LCA Amount:</u> This is the amount normalized to 1 kg of the quantitative reference flow. In this case, it is the amount per kg REO product.\n",
+    "* <u>LCA Unit</u>\n",
+    "* <u>Is_input:</u> Determines whether the created exchange is an input or an output\n",
+    "* <u>Reference Product:</u> There should be one reference product. For example, in this case its the 99.85% REO Product.\n",
+    "* <u>Flow Type</u>\n",
+    "* <u>Category:</u> Flows are labeled as Technosphere flows (referred to as product flows in openLCA), waste flows, and elementary flows.\n",
+    "* <u>Context:</u> Elementary flows are assigned a context such as: emission/air, emission/ground, resource/ground, etc.\n",
+    "* <u>UUID:</u> Since elementary flows should be assigned a FEDEFL compliant flow in openLCA, they are automatically assigned a UUID. The UUID is assigned based on matching flow name and context in the Federal Elementary Flow List.\n",
+    "* <u>Description</u>\n",
     "\n",
     "</span>"
    ]
@@ -1076,12 +1089,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0121e236",
    "metadata": {},
    "outputs": [],
    "source": [
-    "process_name = \"Test Process 4\"  # Replace with the actual process name you want to use"
+    "process_name = input(\"Enter process name: \")  "
    ]
   },
   {
@@ -1094,12 +1107,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "46304b81",
    "metadata": {},
    "outputs": [],
    "source": [
-    "process_description = \" Example Process Description\"  # Replace with the actual process description you want to use"
+    "process_description = input(\"Enter a process description: \")"
    ]
   },
   {
@@ -1116,26 +1129,25 @@
    "metadata": {},
    "source": [
     "<span style=\"color:black\">  \n",
+    "In the next step, the function reads the exchanges table and examines each row:\n",
+    "</br>\n",
     "\n",
-    "The functioning features include:\n",
-    "* Create a new empty process\n",
-    "* Create an exchange of the reference flow\n",
+    "* If the exchange is a reference product, the user can: 1) create an exchange using an existing flow in the PrOMMiS database or 2) create a new flow, create an exchange for it, and set it as a quantitative reference (e.g., reference product)\n",
+    "</br>\n",
     "\n",
-    "Intermediate functions/features that have been developed include:\n",
-    "* Search for a flow by keyword\n",
-    "* Search for processes that produce a given flow\n",
-    "    * This feature is being optimized to minimize user waiting time\n",
-    "* Create exchanges for elementary flows given their uuid, amount, and unit\n",
+    "* If the exchange is an elementary flow, the function automatically creates an exchange for it using the given uuid.\n",
+    "</br>\n",
     "\n",
-    "The features under development:\n",
-    "* Create exchange for a given flow and process IDs\n",
-    "* Develop an interactive user interface, allowing the user to create a new process in openLCA\n",
+    "* If the exchange is a technosphere or waste flow, the user has to select a flow and and provider in order to create an exchange, using the following sequence:\n",
+    "    1) Enter keyword to search for a flow\n",
+    "    2) Select a flow from a provided list. The function automatically creates a list of all providers generating this flow.\n",
+    "    3) Select a provider from the provided list.\n",
     "</span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "db70773f",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1380,6 @@
     "process = lca_prommis.create_lca.create_new_process(netl,df,process_name,process_description)\n",
     "# get the process uuid to be used in the following step when create a product system\n",
     "process_id = netl.query(olca.Process, process.id)\n",
-    "# TODO: give option for the user to enter another keyword when searching for a flow\n",
     "# NOTE: For future discussion - is it better to select the flow then the provider (current status) or pick provider first then select relevant flows?"
    ]
   },
@@ -1468,7 +1479,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "olca_env",
    "language": "python",
    "name": "python3"
   },
